  - `p.u.LibraryPath.is_32bit`, `p.u.LibraryPath.is_64bit`, and `p.u.LibraryPath.bitness`
    have been removed
  - `p.u.get_shared_library_arch` now returns `p.u.PEMachineType` instead of a string
  - `p.u.get_arch` now returns a list of `p.u.ArchitectureType`
- update `Resource` context manager type annotation to preserve derived type PR # 740

1.13.0 (22-12-2022)
-------------------

- add official support for Python 3.11 and drop support for Python 3.7
- add support for VICP resource names PR #699
  NOTE: the interface type enum value for VICP is unknown. No documentation was
  found and tests using the VICP passport were not conclusive. If somebody figures
  out the right value it would be great
- numerous bug fixes related to VISA attributes PR #697
  This included fixing several typos, uncommenting the
  AttrVI_ATTR_INTF_PARENT_NUM class, and adding in the
  AttrVI_ATTR_RM_SESSION class,

1.12.0 (11-05-2022)
-------------------

- remove deprecated feature planned for removal PR #600
  This include the visa.py module. `
  import visa` should be replaced by `import pyvisa as visa` and usage of
  `python -m visa info` by `pyvisa-info` and `python -m visa shell` by `pyvisa-shell`
- optimize write_binary_values when passing in bytes, bytearray or numpy arrays PR #668
  We avoid going through the struct module which can cause large memory overheads.
- fix collection of debug info on the ctypes wrapper PR #598
- allow an IEEE binary block or an HP block to be empty PR #581
  This is more correct and can affect real instruments. However this introduces
  a minor backward incompatibility when parsing IEEE header. The data length for
  #0 is now reported to be -1 instead of 0 since 0 corresponds to #10.
  This changes should affect a minority of user and does not change the behavior for
  instrument returning #0 (only the value of data_length as returned by
  parse_ieee_block_header is affected and functions using it have been adapted).