@@ -2,12 +2,13 @@
 """Test the behavior of the command line tools.
 
 """
+import argparse
 import sys
 from subprocess import PIPE, Popen, run
 
 import pytest
 
-from pyvisa import util
+from pyvisa import cmd_line_tools, util
 
 from . import BaseTestCase, require_visa_lib
 
@@ -41,3 +42,18 @@ class TestCmdLineTools(BaseTestCase):
         with Popen(["pyvisa-shell"], stdin=PIPE, stdout=PIPE) as p:
             stdout, stderr = p.communicate(b"exit")
         assert stdout.count(b"Welcome to the VISA shell") == 1
+
+
+@pytest.mark.parametrize(
+    "args, want",
+    [
+        (argparse.Namespace(backend=None), ""),
+        (argparse.Namespace(backend="py"), "@py"),
+        (argparse.Namespace(backend="foo.yaml@sim"), "foo.yaml@sim"),
+        (argparse.Namespace(backend="/foo/bar/baz.yaml@sim"), "/foo/bar/baz.yaml@sim"),
+        (argparse.Namespace(backend="@sim"), "@sim"),
+    ],
+)
+def test__create_backend_str(args: argparse.Namespace, want: str) -> None:
+    got = cmd_line_tools._create_backend_str(args)
+    assert got == want
